--- a/tyyli.css
+++ b/tyyli.css
@@ -62,12 +62,13 @@
      position: absolute;
      top: 0;
      left: 0;
-     width: 100%;
-     height: 100%;
+     width: 97%;
+     height: 97%;
      border-radius: 10px;
      background-size: cover;
      background-position: center;
      z-index: 1;
+     border: 3px solid #fff;
  }
 
  input[type="button"] {
